--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "react-hook-form-series",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@tailwindcss/postcss": "^4.0.6",
-    "@types/node": "^22.13.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "15.1.7",
-    "postcss": "^8.5.2",
-    "tailwindcss": "^4.0.6",
-    "typescript": "^5.7.3"
-  }
+	"name": "react-hook-form-series",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"turbo": "next dev --turbopack",
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "15.1.7",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3.2.0",
+		"@tailwindcss/postcss": "^4.0.6",
+		"@types/node": "^22.13.4",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"eslint": "^9.20.1",
+		"eslint-config-next": "15.1.7",
+		"postcss": "^8.5.2",
+		"tailwindcss": "^4.0.6",
+		"typescript": "^5.7.3"
+	}
 }
