--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"eslint": "^9.20.1",
 		"eslint-config-next": "15.1.7",
 		"postcss": "^8.5.2",
+		"react-hook-form": "^7.54.2",
 		"tailwindcss": "^4.0.6",
 		"typescript": "^5.7.3"
 	}
